added new calculator style, minor bugfixes

--- a/style/calculator.css
+++ b/style/calculator.css
@@ -164,7 +164,10 @@ html[data-theme="light"] {
     border-radius: calc(var(--buttonWidth) / 2);
 }
 
-
+.calculator-pod[data-buttons="flat"] .calc-btn {
+    box-shadow: none;
+    border: 1px solid #454040;
+}
 
 /*********************************************************************************************/
 /*****                     styling the calculator's landscape mode                       *****/
