--- a/templates/settings.html
+++ b/templates/settings.html
@@ -65,6 +65,7 @@
     <input type="range" id="inpPouchSize" min="5" max="25" value="5" step="5">
     <span class="unit">5 kg</span>
 </div>
+<!--
 <div class="control">
     <label for="inpPackageSize" id="lblPackageSize">Fliesen / Pack</label>
     <input type="range" id="inpPackageSize" min="1" max="50" value="6">
@@ -80,7 +81,8 @@
         <option>25</option>
         <option>44</option>
         <option>50</option>
-        <!-- Mosaik: 20 Blatt á 225 Stk. -->
-        <!-- <option>4500</option> -->
+         Mosaik: 20 Blatt á 225 Stk. -->
+        <!-- <option>4500</option>
     </datalist>
-</div>
+</div>  
+-->
